tests/should_fail/match_pattern_string_on_int.nv
// should_fail: String literal pattern on an Int match
module match_pattern_string_on_int
fn bad(n: Int) -> String {
    return match n {
        "hello" => "nope",
        _ => "ok"
    }
}
